<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1title">Question 1</string>
    <string name="question2title">Question 2</string>
    <string name="question3title">Question 3</string>
    <string name="question4title">Question 4</string>
    <string name="question5title">Question 5</string>
    <string name="question1">In which games appears the famous video game character Mario?</string>
    <string name="answerMario">Mario</string>
    <string name="answerDonkeyKong">Donkey Kong</string>
    <string name="answerPortal">Portal</string>
    <string name="question2">Which year was the game boy released?</string>
    <string name="answer1989">1989</string>
    <string name="answer1979">1979</string>
    <string name="answer1999">1999</string>
    <string name="question3">What\'s the Most famous website to learn android?</string>
    <string name="nanodegree">website which give nanodegree</string>
    <string name="question4">\"The cake is a lie\" is a famous quote from the game:</string>
    <string name="answerBorderlands">Borderlands</string>
    <string name="question5">Which are Nintendo consoles?</string>
    <string name="submit">Submit</string>
    <string name="answerBioShock">BioShock</string>
    <string name="answerGameBoy">Game Boy</string>
    <string name="answerPSP">PSP</string>
    <string name="answerWii">Wii</string>
</resources>
